Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch master
Your branch is up to date with 'origin/master'.

Changes to be committed:
	modified:   composer.json
	modified:   composer.lock
	modified:   config/bundles.php
	new file:   config/packages/reset_password.yaml
	modified:   config/packages/security.yaml
	modified:   config/services.yaml
	new file:   migrations/Version20231108135111.php
	new file:   migrations/Version20231108152059.php
	new file:   migrations/Version20231110094933.php
	new file:   public/css/country.css
	new file:   public/css/editor.css
	new file:   public/css/game.css
	new file:   public/css/home.css
	new file:   public/css/player.css
	modified:   public/css/style.css
	new file:   public/css/team.css
	new file:   public/css/user.css
	new file:   public/img/player.jpg
	modified:   public/js/apiGames.js
	new file:   public/js/collectionTypeSocialMedia.js
	renamed:    public/upload/avatar/6543b34da870d.jpg -> public/upload/avatar/6543b3f369a80.jpg
	new file:   public/upload/avatar/654b3c4921139.jpg
	new file:   public/upload/avatar/654ca753066b8.jpg
	new file:   public/upload/logo/defaultlogo.jpg
	modified:   src/Controller/ApiController.php
	modified:   src/Controller/CountryController.php
	modified:   src/Controller/EditorController.php
	modified:   src/Controller/GameController.php
	modified:   src/Controller/HomeController.php
	new file:   src/Controller/ModerationController.php
	new file:   src/Controller/PlayerController.php
	modified:   src/Controller/RegistrationController.php
	new file:   src/Controller/ResetPasswordController.php
	modified:   src/Controller/SecurityController.php
	new file:   src/Controller/TeamController.php
	modified:   src/Controller/UserController.php
	modified:   src/Entity/Country.php
	modified:   src/Entity/Editor.php
	modified:   src/Entity/Game.php
	modified:   src/Entity/Player.php
	new file:   src/Entity/ResetPasswordReq

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -20,7 +20,7 @@ security:
             logout:
                 path: app_logout
                 # where to redirect after logout
-                target: app_home
+                target: app_login
 
             remember_me:
                 secret: '%kernel.secret%'
@@ -33,12 +33,17 @@ security:
 
             # https://symfony.com/doc/current/security/impersonating_user.html
             # switch_user: true
-
+    # Hierarchy of roles which will allow me to put less is granted for exemple an is_granted in which i would like to authorize moderator and admin would have to be written like this : {% is_granted('ROLE_MODERATOR') || is_granted('ROLE_ADMIN') %} now if i only write the moderator part the admin will be able to access it too. 
+    role_hierarchy:
+        ROLE_USER:      []
+        ROLE_MODERATOR: [ROLE_USER]
+        ROLE_ADMIN:     [ROLE_MODERATOR]
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/moderator, roles: ROLE_MODERATOR }
+        - { path: ^/user, roles: ROLE_USER }
 
 when@test:
     security:
