Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch eSportXpertise
Your branch is up to date with 'origin/eSportXpertise'.

Changes to be committed:
	modified:   config/packages/security.yaml
	new file:   migrations/Version20231116132442.php
	new file:   migrations/Version20231116151209.php
	new file:   migrations/Version20231120130514.php
	new file:   migrations/Version20231120134504.php
	modified:   public/css/country.css
	modified:   public/css/player.css
	modified:   public/css/style.css
	modified:   public/js/collectionTypeSocialMedia.js
	new file:   public/js/nationalitySearchBar.js
	modified:   public/js/searchBars.js
	modified:   src/Controller/CountryController.php
	modified:   src/Controller/EditorController.php
	modified:   src/Controller/PlayerController.php
	modified:   src/Controller/RegistrationController.php
	modified:   src/Controller/TeamController.php
	modified:   src/Entity/Editor.php
	modified:   src/Entity/Player.php
	modified:   src/Entity/Team.php
	modified:   src/Entity/User.php
	modified:   src/Form/PlayerType.php
	modified:   src/Form/RegistrationFormType.php
	modified:   src/Form/TeamType.php
	modified:   templates/base.html.twig
	modified:   templates/country/countryDetails.html.twig
	modified:   templates/country/index.html.twig
	modified:   templates/editor/editorDetails.html.twig
	modified:   templates/editor/editorForm.html.twig
	modified:   templates/player/playerDetails.html.twig
	modified:   templates/player/playerForm.html.twig
	modified:   templates/registration/register.html.twig
	new file:   templates/searchbar.html.twig
	modified:   templates/team/teamDetails.html.twig
	modified:   templates/team/teamForm.html.twig

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -36,6 +36,7 @@ security:
     # Hierarchy of roles which will allow me to put less is granted for exemple an is_granted in which i would like to authorize moderator and admin would have to be written like this : {% is_granted('ROLE_MODERATOR') || is_granted('ROLE_ADMIN') %} now if i only write the moderator part the admin will be able to access it too. 
     role_hierarchy:
         ROLE_USER:      []
+        ROLE_TEAM: [ROLE_USER]
         ROLE_MODERATOR: [ROLE_USER]
         ROLE_ADMIN:     [ROLE_MODERATOR]
     # Easy way to control access for large sections of your site
