--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -37,13 +37,14 @@ security:
     role_hierarchy:
         ROLE_USER:      []
         ROLE_TEAM: [ROLE_USER]
-        ROLE_MODERATOR: [ROLE_USER]
+        ROLE_MODERATOR: [ROLE_TEAM]
         ROLE_ADMIN:     [ROLE_MODERATOR]
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: ^/moderator, roles: ROLE_MODERATOR }
+        - { path: ^/userTeam, roles: ROLE_TEAM }
         - { path: ^/user, roles: ROLE_USER }
 
 when@test:
