Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch WithoutTournament
Your branch is up to date with 'origin/WithoutTournament'.

Changes to be committed:
	modified:   config/services.yaml
	new file:   migrations/Version20240108104845.php
	modified:   public/css/game.css
	modified:   public/css/home.css
	modified:   public/css/style.css
	modified:   public/css/team.css
	new file:   public/upload/logo/659bc6ff36690.jpg
	new file:   public/upload/logo/659bc73d189a8.jpg
	new file:   public/upload/logo/659bc75718db4.jpg
	new file:   public/upload/logo/659bc76ce0619.jpg
	new file:   public/upload/logo/659bc820e76fc.jpg
	new file:   public/upload/logo/659bc832bb765.jpg
	new file:   public/upload/pictures/defaultPicture.jpg
	modified:   src/Controller/PlayerController.php
	modified:   src/Controller/TeamController.php
	modified:   src/Entity/Player.php
	modified:   src/Form/PlayerType.php
	new file:   src/Service/FileUploaderPicture.php
	modified:   templates/base.html.twig
	modified:   templates/game/gameDetails.html.twig
	modified:   templates/home/index.html.twig
	modified:   templates/player/playerForm.html.twig
	modified:   templates/security/login.html.twig
	modified:   templates/team/index.html.twig
	modified:   templates/team/teamDetails.html.twig
	modified:   templates/topTeamsList.html.twig

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -33,3 +33,8 @@ services:
     App\Service\FileUploaderLogo:
         arguments:
             $targetDirectory: 'upload/logo'
+    
+    # This one is for the player's picture
+    App\Service\FileUploaderPicture:
+        arguments:
+            $targetDirectory: 'upload/picture'
